add mask filling

--- a/15_transfomer_01.ipynb
+++ b/15_transfomer_01.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bc4125a4-698e-4795-b426-b62af460273a",
    "metadata": {},
    "outputs": [
@@ -170,6 +170,62 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a8ba1b67164c437db869aa18a7c5c0a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/26.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ab7af93f216497ab930b251f4a4f30b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/899k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9538fc4bafd9414dab925845860e01e1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/456k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a0166758f2d4b53af6e2d9a8e412c7f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -178,10 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "405d8091-fcd6-4550-8f2c-f1446da5a934",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sequence': 'This is a sensitive topic on transport and libarary',\n",
+       " 'labels': ['business', 'education', 'math'],\n",
+       " 'scores': [0.5921958684921265, 0.22866113483905792, 0.17914298176765442]}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "classifier(\"This is a sensitive topic on transport and libarary\", \n",
     "          candidate_labels=[\"education\", \"math\", \"business\"])"
@@ -197,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b576a28b-25d8-4e96-b027-b0f97bb5d41e",
    "metadata": {},
    "outputs": [],
@@ -207,10 +276,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cb943a42-ea57-4c43-9081-5c471fdbfc7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': 'In this notebook, we will create several templates to illustrate how to generate the JavaScript code. For simplicity, we used the Angular JS example from one of our previous posts.\\n\\nIn fact, we would not think you would not understand. The above'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "generator(\"In this notebook, we will\")"
    ]
@@ -220,7 +307,36 @@
    "execution_count": null,
    "id": "95357c1c-f592-451e-98bc-36ee63371314",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "90b3de6a42c346b188b662f6520c1c3b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/762 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36e515fd5b624e0182fc1fff45dfa925",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/353M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Using other model\n",
     "gen_gpt2 = pipeline(\"text-generation\", model=\"distilgpt2\")\n",
@@ -228,9 +344,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e2a65ff6-b1e9-4ecb-ac00-68193e7c6ed6",
+   "metadata": {},
+   "source": [
+    "### Mask filling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f0ff374-7536-4b77-91a0-5c2789b5286c",
+   "id": "36fe90b0-a4e3-4252-bea9-319658faf502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unmasker = pipeline(\"fill-mask\")\n",
+    "unmasker(\"This notebook will show <mask> direction\", top_k=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "506882c8-f6cd-4ded-b5c5-aaf8c89ebb1c",
    "metadata": {},
    "outputs": [],
    "source": []
