add named entity recognition

--- a/15_transfomer_01.ipynb
+++ b/15_transfomer_01.ipynb
@@ -304,43 +304,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "95357c1c-f592-451e-98bc-36ee63371314",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90b3de6a42c346b188b662f6520c1c3b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/762 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
     },
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36e515fd5b624e0182fc1fff45dfa925",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Downloading:   0%|          | 0.00/353M [00:00<?, ?B/s]"
+       "[{'generated_text': \"In this pandas notebook, we will be using the first part of the first part of the series on Pandas as a learning tool for students to learn from Pandas. In the next post, we'll look at how to use both learning tools\"}]"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Using other model\n",
     "gen_gpt2 = pipeline(\"text-generation\", model=\"distilgpt2\")\n",
-    "gen_gpt2(\"In this notebook, we will\", max_lenght=20)"
+    "gen_gpt2(\"In this pandas notebook, we will\", max_lenght=20)"
    ]
   },
   {
@@ -353,19 +342,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "36fe90b0-a4e3-4252-bea9-319658faf502",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c46c20a955a141d48419bf54911cc65b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/480 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49ec85dd356342a9b8fbaaca7e0aff30",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/331M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee6b7136484d49f4a86824a48209d83f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/899k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0dba442efe648eabaec0edd6d6f2025",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/456k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df44c36fb99442dab4dff5741860d7a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'sequence': 'This notebook will show visual direction',\n",
+       "  'score': 0.05728420987725258,\n",
+       "  'token': 7133,\n",
+       "  'token_str': ' visual'},\n",
+       " {'sequence': 'This notebook will show editorial direction',\n",
+       "  'score': 0.053508173674345016,\n",
+       "  'token': 8161,\n",
+       "  'token_str': ' editorial'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unmasker = pipeline(\"fill-mask\")\n",
     "unmasker(\"This notebook will show <mask> direction\", top_k=2)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51c2964a-fc18-4e54-8801-e0ab5e54d8c4",
+   "metadata": {},
+   "source": [
+    "### Named entity recognition"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "506882c8-f6cd-4ded-b5c5-aaf8c89ebb1c",
+   "id": "d1b7a409-6d2c-4a28-b8b6-0e433d1d6048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ner = pipeline(\"ner\", grouped_entities=True)\n",
+    "ner(\"I am Dan P who carry out research at Monash Uni in Melbourne City\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7e5ad92-323a-4cd1-8352-f441743bf0ec",
    "metadata": {},
    "outputs": [],
    "source": []
