--- a/15_transfomer_01.ipynb
+++ b/15_transfomer_01.ipynb
@@ -452,16 +452,65 @@
    "execution_count": null,
    "id": "d1b7a409-6d2c-4a28-b8b6-0e433d1d6048",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d508f84811a94ccc883474bd9fea02d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/998 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dbb9d5b6cae44f9ea3df49a836788bdb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.33G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ner = pipeline(\"ner\", grouped_entities=True)\n",
     "ner(\"I am Dan P who carry out research at Monash Uni in Melbourne City\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f070807b-fbcf-46ca-8cab-c076a380f80e",
+   "metadata": {},
+   "source": [
+    "### Question answering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7e5ad92-323a-4cd1-8352-f441743bf0ec",
+   "id": "3176224a-1a66-40fd-bff6-a69f1a400d28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qa = pipepline(\"question-answering\")\n",
+    "qa(question=\"Where to I work\",\n",
+    "   context=\"I am Dan P who carry out research at Monash Uni in Melbourne City\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a87c90f-0cab-4544-955f-dbc5a1839ea0",
    "metadata": {},
    "outputs": [],
    "source": []
