add text summarization

--- a/15_transfomer_01.ipynb
+++ b/15_transfomer_01.ipynb
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d1b7a409-6d2c-4a28-b8b6-0e433d1d6048",
    "metadata": {},
    "outputs": [
@@ -480,6 +480,66 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "88c1d7f0b10348ebaadf7dcdd8b724a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/60.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1708929c4e35440199ffa487c40a0157",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/213k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/danph/.pyenv/versions/3.8.5/envs/.ml/lib/python3.8/site-packages/transformers/pipelines/token_classification.py:154: UserWarning: `grouped_entities` is deprecated and will be removed in version v5.0.0, defaulted to `aggregation_strategy=\"AggregationStrategy.SIMPLE\"` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'entity_group': 'PER',\n",
+       "  'score': 0.9955268,\n",
+       "  'word': 'Dan P',\n",
+       "  'start': 5,\n",
+       "  'end': 10},\n",
+       " {'entity_group': 'ORG',\n",
+       "  'score': 0.991117,\n",
+       "  'word': 'Monash Uni',\n",
+       "  'start': 37,\n",
+       "  'end': 47},\n",
+       " {'entity_group': 'LOC',\n",
+       "  'score': 0.971781,\n",
+       "  'word': 'Melbourne City',\n",
+       "  'start': 51,\n",
+       "  'end': 65}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -497,20 +557,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3176224a-1a66-40fd-bff6-a69f1a400d28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7fe07b79ec594e6bbf02628d3481595f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/473 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2c89041fff649178a0d91fae04902a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/261M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ace1c5eba394bf7b836c3605b50b1be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/29.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c816b649095846b48f26666689cd4edf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/213k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e334d3aa55f46acbf4c495cf88d5480",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/436k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'score': 0.8566566705703735, 'start': 37, 'end': 47, 'answer': 'Monash Uni'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "qa = pipepline(\"question-answering\")\n",
+    "qa = pipeline(\"question-answering\")\n",
     "qa(question=\"Where to I work\",\n",
     "   context=\"I am Dan P who carry out research at Monash Uni in Melbourne City\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d1ac8f9-7aad-443b-9bbb-aec61bdb6ca8",
+   "metadata": {},
+   "source": [
+    "### Summarization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a87c90f-0cab-4544-955f-dbc5a1839ea0",
+   "id": "776dce8b-72f3-4de9-aecc-a39bc9e9d633",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "885c9559c785446fa4e141364e2e2e45",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.80k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f29f8132003341a78637bc9cd808db0c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.22G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summarizer = pipeline(\"summarization\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "201e6642-3682-463f-907c-4eeef61ec0c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article = \"\"\"\n",
+    "\n",
+    "The ongoing discussions within the presidential palace in Kabul are “utterly extraordinary” after two decades of war, CNN International Security Editor Nick Paton Walsh reports.\n",
+    "\n",
+    "“This has been a morning of stunning events and that looks like we are heading towards some sort of transitional government here,” Paton Walsh said. He said names are being floated around, though nothing is confirmed, and President Ashraf Ghani would need to agree to step aside to make way for a transitional administration.\n",
+    "\n",
+    "Yesterday Ghani made a brief but sombre address to the nation in which he said he was consulting with elders and other leaders both inside and outside of the country. In the short speech, he told the Afghan people his \"focus is to avoid further instability, aggression and displacement,\" but he did not resign.\n",
+    "\n",
+    "As talks on Sunday continue, Paton Walsh said there hasn’t been evidence of Taliban fighters moving into the city. Earlier panic appeared to be a clash around a bank where people were trying to withdraw money.\n",
+    "\n",
+    "“I've heard sporadic gunfire here but that seems to be traffic disputes. A quick drive around the city has shown traffic has dissipated until you get towards the airport, so utter chaos and panic here. The traffic in the skies we saw around the embassy appears to have quietened as well so perhaps that might suggest some of that operation is winding up,” he continued.\n",
+    "The apparently last-ditch diplomatic efforts would hopefully avoid the Taliban presumably moving to its next phase of slowly entering the city, which Paton Walsh said would “not be remotely pleasant for anybody living here.”\n",
+    "\n",
+    "“There will be elements of resistance too so I think everybody would prefer to avoid that kind of situation,” he added.\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74f70f22-5207-4e88-89c0-8e3071a65fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summarizer(article)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4839cb3e-2725-4a6b-a90f-d6e0b9d8debe",
    "metadata": {},
    "outputs": [],
    "source": []
